Bug 360869 - text-anchor="middle" not working when under some circumstances. r=longsonr, sr=roc, a=jay